jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8st-master.a.incd.pt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-operator-http-gitlab
            port:
              number: 8080
